Changed the dark mode toggle to be a checkbox. Finished main dark mode toggle function. Resolves #16

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -113,6 +113,40 @@ button:hover {
 		0px -5px 10px rgba(0, 0, 0, 0.1);
 	transform: translateY(3px);
 }
+input[type="checkbox"] {
+	visibility: hidden;
+}
+
+input[type="checkbox"] + label {
+	cursor: pointer;
+	display: block;
+	width: 52px;
+	height: 27px;
+	background: grey;
+	border-radius: 100px;
+	position: relative;
+}
+
+input[type="checkbox"] + label:after {
+	content: "";
+	position: absolute;
+	top: 1px;
+	left: 1px;
+	background: white;
+	width: 25px;
+	height: 25px;
+	border-radius: 50%;
+	transition: 0.5s;
+}
+
+input[type="checkbox"]:checked + label {
+	background: black;
+}
+
+input[type="checkbox"]:checked + label:after {
+	left: calc(100% - 2px);
+	transform: translateX(-100%);
+}
 
 .container {
 	/* display: block; */
